--- a/portaboutme.html
+++ b/portaboutme.html
@@ -322,8 +322,8 @@ transition-duration: 1s;
         width: 70%;
         height: 100vh;
         background-color: #111;
-        flex-direction: row; 
-        justify-content: space-around;
+        flex-direction: column; 
+        justify-content: center;
         align-items: center;
         gap: 15px; 
         transition: left 0.5s ease;
