--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Bruno+Ace+SC&display=swap" rel="stylesheet">
 
     <style>
+        * {
+            box-sizing: border-box;
+margin: 0px;
+            padding: 0px;
+            
         body {
             margin: 0px;
             padding: 0px;
