--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ nav ul {
 </head>
 <body>
   
- <div class="container">
+ <section class="container">
     <nav>
     <input type="checkbox" id="check">
     <label for="check" class="hamburger-icon">
@@ -203,15 +203,15 @@ nav ul {
         <li><a href="portcontactme.html">Contact</a></li>
     </ul>
 </nav>
-    <div class="name">
+    <section class="name">
    <h2>Karthik <br>
     Kanigolla
    </h2>
    <p>Student at SST</p>
-   </div>
+   </section>
    <footer>-Made by yours truly.</footer>
    
-    </div>
+    </section>
 
 </body>
 </html>
